--- a/style.css
+++ b/style.css
@@ -335,3 +335,29 @@ footer {
         gap: 1.5rem;
     }
 }
+
+/* Design section home*/
+.bg-primary {
+    background: linear-gradient(135deg, #007bff, #b22222); /* Dégradé pour la section Home */
+}
+
+.text-warning {
+    color: #ffd700; /* Couleur jaune doré */
+}
+
+/* Animation */
+.fade-in {
+    opacity: 0;
+    animation: fadeIn 1.5s forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
