--- a/style.css
+++ b/style.css
@@ -42,9 +42,21 @@ header p {
 }
 
 .profile-img {
-    max-width: 70%; /* Ajustez cette valeur pour la taille de l'image */
-    border-radius: 10px; /* Coins arrondis */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ombre douce */
+    border-radius: 50%; /* Pour une image de profil ronde */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Ombre pour faire ressortir l'image */
+}
+
+h2.display-4 {
+    color: #007bff; /* Couleur personnalisée pour le titre */
+}
+
+.btn-primary {
+    background-color: #007bff; /* Couleur du bouton */
+    border: none; /* Pas de bordure */
+}
+
+.btn-primary:hover {
+    background-color: #0056b3; /* Couleur du bouton au survol */
 }
 
 /* About Me Section */
