--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 /* Global Styles */
 body {
     font-family: Arial, sans-serif;
+    font-weight: normal;
     background-color: #f9f9f9;
     margin: 0;
     padding: 0;
@@ -16,15 +17,30 @@ header {
 }
 
 header h1 {
-    font-size: 1.8rem;
+    font-size: 2.5rem;
     font-weight: bold;
     margin-bottom: 0;
+}
+
+h2 {
+    font-size: 2em; /* Taille légèrement plus petite */
+    font-weight: bold;
+}
+
+h3 {
+    font-size: 1.5em; /* Encore plus petit pour les sous-sections */
+    font-weight: normal; /* Peut être normal pour moins d'impact */
 }
 
 header p {
     font-size: 1rem;
     margin: 0;
     color: #666;
+    line-height: 1.5;
+}
+
+strong {
+    font-weight: bold; /* Met en gras */
 }
 
 /* Navigation Tabs */
