--- a/style.css
+++ b/style.css
@@ -4,30 +4,34 @@
 body {
     font-family: Arial, sans-serif;
     font-weight: normal;
-    background-color: #f9f9f9;
+    background-color: #f2f2f2;
     margin: 0;
     padding: 0;
-    color: #333;
+    color: #333333;
 }
 
 /* Header */
 header {
-    background-color: #fff;
+    background-color: #003366;
+    color: #ffffff;
     border-bottom: 1px solid #ddd;
 }
 
 header h1 {
+    color: #66CC66;
     font-size: 2.5rem;
     font-weight: bold;
     margin-bottom: 0;
 }
 
 h2 {
+    color: #FFFFFF;
     font-size: 2em; /* Taille légèrement plus petite */
     font-weight: bold;
 }
 
 h3 {
+    color: #FFFFFF;
     font-size: 1.5em; /* Encore plus petit pour les sous-sections */
     font-weight: normal; /* Peut être normal pour moins d'impact */
 }
@@ -71,8 +75,9 @@ h2.display-4 {
 }
 
 .btn-primary {
-    background-color: #007bff; /* Couleur du bouton */
+    background-color: #66CC66; /* Couleur du bouton */
     border: none; /* Pas de bordure */
+    color: #FFFFFF;
 }
 
 .btn-primary:hover {
@@ -294,8 +299,8 @@ h2.display-4 {
 
 /* Footer */
 footer {
-    background-color: #f5f5f5;
-    color: #666;
+    background-color: #003366;
+    color: #FFFFFF;
     text-align: center;
     padding: 15px 0;
     font-size: 0.9rem;
