--- a/style.css
+++ b/style.css
@@ -4,34 +4,32 @@
 body {
     font-family: Arial, sans-serif;
     font-weight: normal;
-    background-color: #F8F9FA;
+    background-color: #f9f9f9;
     margin: 0;
     padding: 0;
-    color: #212529;
+    color: #333;
 }
 
 /* Header */
 header {
-    background-color: #007BFF;
-    color: #ffffff;
+    background-color: #fff;
     border-bottom: 1px solid #ddd;
 }
 
 header h1 {
-    color: #28A745;
     font-size: 2.5rem;
     font-weight: bold;
     margin-bottom: 0;
 }
 
 h2 {
-    color: #FFFFFF;
+    color: #333;
     font-size: 2em; /* Taille légèrement plus petite */
     font-weight: bold;
 }
 
 h3 {
-    color: #FFFFFF;
+    color: #333;
     font-size: 1.5em; /* Encore plus petit pour les sous-sections */
     font-weight: normal; /* Peut être normal pour moins d'impact */
 }
