--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@
 body {
     font-family: Arial, sans-serif;
     font-weight: normal;
-    background-color: #f0f0f01e;
+    background-color: #F0F0F0;
     margin: 0;
     padding: 0;
-    color: #333;
+    color: #333333;
 }
 
 /* Header */
 header {
-    background-color: #FFFFFF;
+    background-color: #F0F0F0;
     border-bottom: 1px solid #DDDDDD;
     padding: 20px;
 }
@@ -20,7 +20,7 @@ header {
 header h1 {
     font-size: 2.5rem;
     font-weight: bold;
-    color: #007BFF; /* Couleur des titres */
+    color: #000000; /* Couleur des titres */
     margin-bottom: 0;
 }
 
@@ -74,7 +74,7 @@ section {
 
 /* Titres dans les sections */
 section h2 {
-    color: #007BFF; /* Couleur des titres de section */
+    color: #000000; /* Couleur des titres de section */
 }
 
 .profile-img {
@@ -89,7 +89,7 @@ h2.display-4 {
 }
 
 .btn-primary {
-    background-color: #338bff; /* Couleur du bouton */
+    background-color: #A9A9A9; /* Couleur du bouton */
     border: none;
     color: #FFFFFF; /* Texte du bouton */
     padding: 10px 20px;
@@ -98,7 +98,7 @@ h2.display-4 {
 }
 
 .btn-primary:hover {
-    background-color: #2b30c0; /* Couleur du bouton au survol */
+    background-color: #696969; /* Couleur du bouton au survol */
 }
 
 /* About Me Section */
@@ -317,7 +317,7 @@ h2.display-4 {
 /* Footer */
 footer {
     background-color: #333333;
-    color: #FFFFFF;
+    color: #333333;
     text-align: center;
     padding: 15px 0;
     font-size: 0.9rem;
