--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /* Header */
 header {
-    background-color: #e71818;
+    background-color: #c0b1b17d;
     border-bottom: 1px solid #DDDDDD;
     padding: 20px;
 }
@@ -55,12 +55,12 @@ strong {
 }
 
 .nav-tabs .nav-link:hover {
-    color: #007bff;
+    color: #A9A9A9;
 }
 
 .nav-tabs .nav-link.active {
     color: #fff;
-    background-color: #007bff;
+    background-color: #696969;
 }
 
 /* Sections */
@@ -89,7 +89,7 @@ h2.display-4 {
 }
 
 .btn-primary {
-    background-color: #A9A9A9; /* Couleur du bouton */
+    background-color: #a9a9a9c4; /* Couleur du bouton */
     border: none;
     color: #FFFFFF; /* Texte du bouton */
     padding: 10px 20px;
@@ -98,7 +98,7 @@ h2.display-4 {
 }
 
 .btn-primary:hover {
-    background-color: #696969; /* Couleur du bouton au survol */
+    background-color: #69696972; /* Couleur du bouton au survol */
 }
 
 /* About Me Section */
@@ -316,7 +316,7 @@ h2.display-4 {
 
 /* Footer */
 footer {
-    background-color: #e61212;
+    background-color: #c0b1b17d;
     color: #333333;
     text-align: center;
     padding: 15px 0;
