--- a/style.css
+++ b/style.css
@@ -114,13 +114,51 @@ h2.display-4 {
     margin-bottom: 20px; /* Espacement sous le titre */
 }
 
+.about-container {
+    text-align: center;
+    padding: 3rem;
+    background-color: var(--light-bg); /* Ajustez selon votre thème */
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 800px; /* Limite la largeur pour un meilleur focus */
+    margin: 0 auto; /* Centre la section */
+}
+
 .about-title {
     font-size: 5rem; /* Taille plus grande */
     color: #b22222; /* Rouge vintage */
-    font-family: 'Courier New', Courier, monospace; /* Police vintage */
+    font-family: 'Lobster', cursive; 
     font-weight: bold; /* Mettre en gras */
-    line-height: 1.1; /* Réduction de l'espacement entre les lignes */
-    margin: 0; /* Supprimez les marges par défaut */
+    line-height: 1.2; /* Réduction de l'espacement entre les lignes */
+    margin-bottom: 1rem; 
+
+}
+
+.about-intro,
+.about-sport,
+.about-vision {
+    font-size: 1.2rem;
+    color: var(--text-dark);
+    margin-bottom: 2rem;
+    line-height: 1.8;
+}
+
+.about-image {
+    margin-top: 2rem;
+}
+
+.about-image img {
+    max-width: 60%; /* Ajustez selon la taille de votre image */
+    border-radius: 10px; /* Coins arrondis */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ajoute une ombre douce */
+}
+
+.about-quote {
+    font-style: italic;
+    color: var(--secondary-color);
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    text-align: center;
 }
 
 /* Skills Section */
