--- a/style.css
+++ b/style.css
@@ -145,6 +145,11 @@ h2.display-4 {
 
 .about-image {
     margin-top: 2rem;
+    padding-left: 1.5rem; /* Ajoute un espacement à gauche de l'image */
+}
+
+.about-text {
+    padding-right: 1.5rem; /* Ajoute un espacement à droite du texte */
 }
 
 .about-image img {
