--- a/style.css
+++ b/style.css
@@ -177,13 +177,13 @@ h2.display-4 {
 
 /* Skills Section */
 .Skills-container {
-    height: 100vh; /* Occupe toute la hauteur de la fenêtre */
+    height: auto; /* Occupe toute la hauteur de la fenêtre */
     overflow: hidden; /* Désactive le défilement dans cette section */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start; /* Aligne les éléments vers le haut */
-    padding-top: 50px; /* Ajoute un espacement au-dessus */
+    padding-top: 50px 20px; /* Ajoute un espacement au-dessus */
 }
 
 .Skills-title {
@@ -191,13 +191,26 @@ h2.display-4 {
     color: #b22222; /* Rouge foncé */
     font-family: 'Lobster', cursive; /* Police vintage */
     margin-bottom: 30px;
+    transition: transform 0.3s;
+}
+
+/* Catégories de compétences */
+.Skills-category {
+    margin-bottom: 30px;
+}
+
+.Skills-category h2 {
+    font-size: 1.8rem;
+    color: #007bff; /* Bleu d'accent */
+    text-align: center;
+    margin-bottom: 15px;
+    font-weight: bold;
 }
 
 /* Effet de hover sur Skills */
 .Skills-title:hover {
     transform: scale(1.1);
 }
-
 
 /* Positionnement des bulles pour éviter tout chevauchement */
 .Skills-bubbles {
