--- a/style.css
+++ b/style.css
@@ -400,14 +400,21 @@ html, body {
 
 /* Spécifique à la section Skills */
 .Skills-section {
+    height: 100vh;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh; /* Hauteur minimale de l'écran */
+    justify-content: center;
+    align-items: center;
 }
 
 .Skills-section .Skills-container {
     flex: 1; /* Permet au contenu de s'étendre pour remplir l'espace */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Centre parfaitement le contenu dans l'espace */
+    padding: 20px; /* Ajoute un léger espacement autour */
 }
 
 .Skills-section footer {
