--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ h2.display-4 {
 }
 
 /* Section About Me */
-.AboutMe-section {
+.about-section {
     height: 100vh; /* Utilise toute la hauteur de l'écran */
     display: flex;
     flex-direction: column;
@@ -195,12 +195,12 @@ h2.display-4 {
     padding: 20px; /* Ajoute un léger espacement */
 }
 
-.AboutMe-container {
+.about-container {
     text-align: center; /* Centre le texte */
     max-width: 800px; /* Limite la largeur pour éviter que le texte ne soit trop étendu */
 }
 
-.AboutMe-container img {
+.about-container img {
     margin-top: 20px; /* Espacement entre l'image et le texte */
     max-width: 40%; /* Taille de l'image ajustée */
     border-radius: 50%; /* Image en forme de cercle */
