--- a/style.css
+++ b/style.css
@@ -130,6 +130,15 @@ h2.display-4 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ombre douce */
 }
 
+.Home-title {
+    font-size: 5rem; /* Taille plus grande */
+    color: #b22222; /* Rouge vintage */
+    font-family: 'Lobster', cursive; 
+    font-weight: bold; /* Mettre en gras */
+    line-height: 1.2; /* Réduction de l'espacement entre les lignes */
+    margin-bottom: 1.5rem; 
+}
+
 /* About Me Section */
 .about-header {
     text-align: left; /* Aligner le texte à gauche */
@@ -153,7 +162,6 @@ h2.display-4 {
     font-weight: bold; /* Mettre en gras */
     line-height: 1.2; /* Réduction de l'espacement entre les lignes */
     margin-bottom: 1.5rem; 
-
 }
 
 .about-intro,
