--- a/style.css
+++ b/style.css
@@ -178,8 +178,6 @@ h2.display-4 {
     padding-left: 4rem; /* Ajoute un espacement à gauche de l'image */
 }
 
-
-
 .about-image img {
     max-width: 100%; /* Ajustez selon la taille de votre image */
     border-radius: 10px; /* Coins arrondis */
@@ -299,11 +297,12 @@ h2.display-4 {
 
 /* Section Experiences */
 .experience-title {
-    font-size: 3rem;
-    color: #333;
-    text-align: center;
-    margin-bottom: 2rem;
-    font-family: 'Georgia', serif;
+    font-size: 5rem; /* Taille plus grande */
+    color: #b22222; /* Rouge vintage */
+    font-family: 'Lobster', cursive; 
+    font-weight: bold; /* Mettre en gras */
+    line-height: 1.2; /* Réduction de l'espacement entre les lignes */
+    margin-bottom: 1.5rem; 
 }
 
 /* Timeline */
@@ -378,11 +377,12 @@ h2.display-4 {
 
 /* Section Formation */
 .formation-title h1 {
-    font-size: 3rem;
-    text-align: center;
-    color: #333;
-    font-family: 'Georgia', serif;
-    margin-bottom: 2rem;
+    font-size: 5rem; /* Taille plus grande */
+    color: #b22222; /* Rouge vintage */
+    font-family: 'Lobster', cursive; 
+    font-weight: bold; /* Mettre en gras */
+    line-height: 1.2; /* Réduction de l'espacement entre les lignes */
+    margin-bottom: 1.5rem; 
 }
 
 /* Timeline */
@@ -538,11 +538,12 @@ footer {
 
 /* Section Contact */
 .contact-title h1 {
-    font-size: 3rem;
-    text-align: center;
-    color: #333;
-    font-family: 'Georgia', serif;
-    margin-bottom: 2rem;
+    font-size: 5rem; /* Taille plus grande */
+    color: #b22222; /* Rouge vintage */
+    font-family: 'Lobster', cursive; 
+    font-weight: bold; /* Mettre en gras */
+    line-height: 1.2; /* Réduction de l'espacement entre les lignes */
+    margin-bottom: 1.5rem; 
 }
 
 /* Contact Cards */
