--- a/style.css
+++ b/style.css
@@ -297,12 +297,13 @@ h2.display-4 {
 
 /* Section Experiences */
 .experience-title {
-    font-size: 5rem; /* Taille plus grande */
+    font-size: 4rem; /* Taille plus grande */
     color: #b22222; /* Rouge vintage */
     font-family: 'Lobster', cursive; 
     font-weight: bold; /* Mettre en gras */
     line-height: 1.2; /* Réduction de l'espacement entre les lignes */
     margin-bottom: 1.5rem; 
+    text-align: center;
 }
 
 /* Timeline */
@@ -377,12 +378,13 @@ h2.display-4 {
 
 /* Section Formation */
 .formation-title h1 {
-    font-size: 5rem; /* Taille plus grande */
+    font-size: 4rem; /* Taille plus grande */
     color: #b22222; /* Rouge vintage */
     font-family: 'Lobster', cursive; 
     font-weight: bold; /* Mettre en gras */
     line-height: 1.2; /* Réduction de l'espacement entre les lignes */
     margin-bottom: 1.5rem; 
+    text-align: center;
 }
 
 /* Timeline */
