--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ h2.display-4 {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #007bff;
+    background-color: #b22222;
     color: #fff;
     text-align: center;
     line-height: 40px;
@@ -356,7 +356,7 @@ h2.display-4 {
 .timeline-content h3 {
     margin-top: 0;
     font-size: 1.5rem;
-    color: #007bff;
+    color: #b22222;
 }
 
 .timeline-content p,
