--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ h2.display-4 {
     background-color: #b22222; /* Rouge pour Expériences */
 }
 
-.formation .circle {
+.Formation .circle {
     background-color: #b22222; /* Bleu pour Formation */
 }
 
